--- a/EmployeeWCF/EmployeeWCF/bin/Web.config
+++ b/EmployeeWCF/EmployeeWCF/bin/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <configuration>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
@@ -8,20 +8,29 @@
     <httpRuntime targetFramework="4.5"/>
   </system.web>
   <system.serviceModel>
+    <extensions>
+      <behaviorExtensions>
+        <add name="Validator" type="CustomValidation.CustomBehaviorSection, CustomValidation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+      </behaviorExtensions>
+    </extensions>
     <behaviors>
+      <endpointBehaviors>
+        <behavior name="EndPointBehavior">
+          <Validator />
+        </behavior>
+      </endpointBehaviors>
       <serviceBehaviors>
-        <behavior>
-          <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
-          <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="false"/>
+        <behavior name="">
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="false" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
     <services>
       <service name="EmployeeWCF.EmployeeService">
-        <endpoint address="" binding="basicHttpBinding" contract="EmployeeWCF.IAddandCreate"></endpoint>
-        <endpoint address="ws" binding="wsHttpBinding" contract="EmployeeWCF.IRetrieve"></endpoint>
+        <endpoint address="" behaviorConfiguration="EndPointBehavior"
+          binding="basicHttpBinding" contract="EmployeeWCF.IAddandCreate" />
+        <endpoint address="ws" behaviorConfiguration="EndPointBehavior" binding="wsHttpBinding" contract="EmployeeWCF.IRetrieve" />
       </service>
     </services>
     <!--<protocolMapping>
